# CourseMap

./: .env.example  .gitignore  Instruction.md  README.md  TEST-DEPLOYMENT-README.md  deploy-azure.sh  docker-compose.yml  test-deployment.sh
.github/workflows/: mitrayectoriautp-web-testing-AutoDeployTrigger-5f8d116a-894f-42f1-b408-04afc56c7946.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  db.py  extractor.py  main.py  models.py  pyproject.toml  requirements.txt
backend/uploads/: .gitkeep
backend/utils/: cleaner.py
frontend/: .dockerignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: CourseSelector.jsx  DocControls.jsx  StudyPlanViewer.jsx  UploadPDF.jsx
frontend/src/services/: api.js
